test/compile_errors/iterator_sentinel_slice.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.Iterator(struct {
        x: [:0]u8,
    }, error{});
}
